--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,142 @@
+img, embed, object, video {
+  max-width: 100%;
+}
 
+body, html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  font-family: futura, sans-serif;
+  font-size: 16px;
+  color: #2d3c49;
+}
+
+h1, h2, h3, h4 {
+  margin: 0;
+}
+
+header, nav, footer, section, article, div {
+  box-sizing: border-box;
+}
+
+p {
+  overflow-wrap: break-word;
+  margin: 0;
+}
+
+/*
+ *
+ * Header
+ *
+ */
+
+header {
+    display: flex;
+    flex-wrap: wrap;
+    border-bottom: solid;
+    border-color: #7d97ad;
+    padding: 1%;
+  }
+
+.logo_container {
+  order: 1;
+  width: 10%;
+  height: 10%;
+  padding-left: 0.5em;
+  padding-top: 0.5em;
+}
+
+.header_logo {
+  width: 90%;
+  height: 90%;
+}
+
+.header_inner {
+  order: 2;
+  width: 90%;
+  text-align: right;
+  padding-right: 0.5em;
+}
+
+
+ /*
+  *
+  * Main
+  *
+  */
+
+/*
+ *
+ * Content
+ *
+ */
+
+.content {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.hero_image {
+    max-width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.featured_work {
+  padding: 1%;
+}
+
+.header_featured_work {
+    color: #7d97ad;
+}
+
+.projects-all {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+.project_thumbnail {
+    width: 100%;
+    order: 0;
+  }
+
+.project_description {
+    order: 1;
+    width: 100%;
+}
+
+.project_link {
+    order: 2;
+}
+
+
+/*
+ *
+ * Responsive
+ *
+ */
+
+
+
+@media screen and (min-width: 750px) {
+    .project1 {
+      width: 33%;
+      order: 0;
+      margin-right: 1%;
+    }
+
+    .project2 {
+      width: 33%;
+      order: 1;
+      margin-right: 1%;
+    }
+
+    .project3 {
+      width: 32%;
+      order: 2;
+    }
+}
